--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
+		"firebase": "^10.5.0",
+		"firebase-admin": "^11.11.0",
 		"pg": "^8.11.3",
 		"sequelize": "^6.33.0",
 		"uuid": "^9.0.1"
